# extract

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
benches/: performance.rs
docs/: book.toml
docs/src/: SUMMARY.md  advanced.md  examples.md  index.md
examples/: config.toml
src/: main.rs
