[package]
name = "extract"
version = "0.2.2"
edition = "2024"
description = "Extract network identifiers from text"
repository = "https://github.com/bedecarroll/extract"
license = "MIT"
keywords = ["network", "parsing", "ip", "mac", "cidr"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1"
log = "0.4"
env_logger = "0.11.8"
edit = "0.1.5"
is-terminal = "0.4"
toml = "0.9"
which = "8"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.0"
criterion = "0.7"
escargot = "0.5"

[[bench]]
name = "performance"
harness = false
